[gd_scene load_steps=11 format=1]

[ext_resource path="res://red soldier.png" type="Texture" id=1]
[ext_resource path="res://soldier f2.png" type="Texture" id=2]
[ext_resource path="res://red soldier f3.png" type="Texture" id=3]
[ext_resource path="res://redSoldier.gd" type="Script" id=4]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://HighlightMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://ArrowMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://Command List.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource/name = "run"
length = 0.25
loop = false
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 24, 8 ) ]
}

[node name="redSoldier" type="AnimatedSprite"]

transform/pos = Vector2( 8, 8 )
frames = SubResource( 1 )
animation = "default"
playing = true
script/script = ExtResource( 4 )

[node name="HP" type="Label" parent="."]

rect/scale = Vector2( 0.95, 0.95 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = -4.0
margin/right = 10.0
margin/bottom = 10.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_as_outline = 0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hitbox" parent="." instance=ExtResource( 5 )]

[node name="HighlightMap" parent="." instance=ExtResource( 6 )]

[node name="ArrowMap" parent="." instance=ExtResource( 7 )]

[node name="Command List" parent="." instance=ExtResource( 8 )]

visibility/visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/run = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.02
one_shot = false
autostart = false

[connection signal="input_event" from="Hitbox" to="." method="_on_Hitbox_input_event"]

[connection signal="about_to_show" from="Command List" to="." method="_on_Command_List_about_to_show"]

[connection signal="item_pressed" from="Command List" to="." method="_on_Command_List_item_pressed"]


